--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
 }
 
 body {
+    font-family: "Montserrat", sans-serif;
     color: #2B2929;
     background-color: var(--primary-bg-color);
 }
@@ -26,15 +27,28 @@ a {
 }
 
 .section-title {
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 1.2;
+
     color: var(--main-text-color);
+}
+
+.button {
+    background-color: var(--accent-color);
+    color: var(--white-text-color);
 }
 
 /* СТИЛІ ДЛЯ ХЕДЕРА  */
 .header .link-about {
+    line-height: 1.88;
+
     color: var(--secondary-etxt-color);
 }
 
 .help-consul {
+    line-height: 1.88;
+
     color: var(--secondary-etxt-color);
 }
 
@@ -42,53 +56,103 @@ a {
     background-color: var(--white-text-color);
 }
 
+.catalog {
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 1.26;
+}
+
 .header .work-hours {
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 1.7;
+
     color: var(--secondary-etxt-color);
 }
 
 .header-tel {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.4;
+
     color: var(--main-text-color);
 }
 
 
-.icons-list .icons-link {
-    color: var(--secondary-etxt-color);
-}
-
+.icons-list .icons-link,
 .species-list .species-link {
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 1.3;
+
     color: var(--secondary-etxt-color);
 }
 
 /* СТИЛІ ДЛЯ "ПОПУЛЯРНІ КАТЕГОРІЇ" */
+.popular-categories .description {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.4;
+}
+
 .popular-categories .title-descr {
     color: var(--main-text-color);
 }
 
-.popular-categories .text-amount {
+.popular-categories .amount {
     color: #B1B1B1;
 }
 
 /* СТИЛІ ДЛЯ "НАЙПОПУЛЯРНІШІ ТОВАРИ" */
 .view-all {
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 1.3;
+
     color: var(--accent-color);
 }
 
 .popular-products .size {
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 1.7;
+
     color: var(--secondary-etxt-color);
 }
 
 .link-title {
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 1.3;
+
+    color: var(--main-text-color);
+}
+
+.in-stock {
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 1.7;
     color: var(--main-text-color);
 }
 
 .past-price {
+    font-size: 15px;
+    line-height: 1.5;
+    text-decoration-line: line-through;
+
     color: #E03D3D;
 }
 
-/* СТИЛІ ДЛЯ "АКЦІЇ" */
-.view-all {
-    color: var(--accent-color);
+.current-price {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.4;
+
+    color: var(--main-text-color);
 }
+
+/* СТИЛІ ДЛЯ "АКЦІЇ" */
+
 
 /* СТИЛІ ДЛЯ "ОСТАННІ ВІДГУКИ" */
 .last-reviews {
