--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ a {
 }
 
 .button {
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 1.3;
+
     background-color: var(--accent-color);
     color: var(--white-text-color);
 }
@@ -54,12 +58,6 @@ a {
 
 .header-bg {
     background-color: var(--white-text-color);
-}
-
-.catalog {
-    font-size: 19px;
-    font-weight: 600;
-    line-height: 1.26;
 }
 
 .header .work-hours {
@@ -159,38 +157,104 @@ a {
     background-color: #E9E9E9;
 }
 
+.title-rating {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.4;
+
+    color: var(--main-text-color);
+}
+
 .rating {
     color: var(--accent-color);
 }
 
 .count-rating {
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 1.7;
+
     color: var(--secondary-etxt-color);
 }
 
 .all-reviews {
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 1.3;
+
     color: var(--secondary-etxt-color);
 }
 
+.reviews-name {
+    font-size: 17px;
+    line-height: 1.4;
+
+    color: var(--main-text-color);
+}
+
 .reviews-descr {
+    line-height: 1.9;
+
     color: var(--secondary-etxt-color);
 }
 
 .reviews-link {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.4;
+
     color: var(--secondary-etxt-color);
 }
 
 /* СТИЛІ ДЛЯ "СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ" */
 .read-blog {
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 1.3;
+
     color: var(--accent-color);
+}
+
+.news-title {
+    font-size: 26px;
+    font-weight: 600;
+    line-height: 1.3;
 }
 
 .articles-news .link-detail {
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 1.3;
+
     color: var(--accent-color);
 }
 
-/* СТИЛІ ДЛЯ "ПЕРЕВАГИ" */
+
+/* СТИЛІ ДЛЯ "ПРО:ПЕРЕВАГИ" */
 .about {
     background-color: var(--white-text-color);
+}
+
+.about .after-title {
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 1.2;
+
+    color: var(--main-text-color);
+}
+
+.about-text {
+    line-height: 30px;
+
+    color: var(--main-text-color);
+}
+
+.benefits-text {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.4;
+
+    color: var(--main-text-color);
 }
 
 /* СТИЛІ ДЛЯ ФУТЕРА */
@@ -198,31 +262,47 @@ a {
     background-color: var(--main-text-color);
 }
 
-.footer-text,
+.footer-text {
+    font-size: 17px;
+    line-height: 24px;
+
+    color: var(--white-text-color);
+}
+
 .footer-title {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.4;
+
     color: var(--white-text-color);
 }
 
 .footer-link {
+    font-size: 17px;
+    line-height: 24px;
+
     color: var(--primary-bg-color);
 }
 
-.footer-number {
+.connection {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.4;
+}
+
+.footer-connection {
     color: var(--white-text-color);
 }
+
 
 .footer-call {
     color: var(--accent-color);
 }
 
-.footer-map {
-    color: var(--white-text-color);
-}
-
-.footer-work {
-    color: var(--white-text-color);
-}
-
 .footer .copyright {
+    font-size: 15px;
+    line-height: 1.5;
+
     color: #B1B1B1;
 }
