--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@
 
 body {
     font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    line-height: 1.4;
     color: #2B2929;
     background-color: var(--primary-bg-color);
 }
@@ -26,32 +28,39 @@ a {
     text-decoration: none;
 }
 
+h2,
+h3 {
+    font-weight: 600;
+}
+
 .section-title {
     font-size: 40px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.2;
 
     color: var(--main-text-color);
 }
 
 .button {
+    font-family: "Montserrat";
     font-size: 19px;
     font-weight: 600;
     line-height: 1.3;
 
+    cursor: pointer;
     background-color: var(--accent-color);
     color: var(--white-text-color);
 }
 
 /* СТИЛІ ДЛЯ ХЕДЕРА  */
 .header .link-about {
-    line-height: 1.88;
+    line-height: 1.9;
 
     color: var(--secondary-etxt-color);
 }
 
 .help-consul {
-    line-height: 1.88;
+    line-height: 1.9;
 
     color: var(--secondary-etxt-color);
 }
@@ -70,8 +79,8 @@ a {
 
 .header-tel {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 1.4;
+    /* font-weight: 600; */
+    /* line-height: 1.4; */
 
     color: var(--main-text-color);
 }
@@ -80,7 +89,7 @@ a {
 .icons-list .icons-link,
 .species-list .species-link {
     font-size: 19px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.3;
 
     color: var(--secondary-etxt-color);
@@ -89,8 +98,8 @@ a {
 /* СТИЛІ ДЛЯ "ПОПУЛЯРНІ КАТЕГОРІЇ" */
 .popular-categories .description {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 1.4;
+    /* font-weight: 600; */
+    /* line-height: 1.4; */
 }
 
 .popular-categories .title-descr {
@@ -104,7 +113,7 @@ a {
 /* СТИЛІ ДЛЯ "НАЙПОПУЛЯРНІШІ ТОВАРИ" */
 .view-all {
     font-size: 19px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.3;
 
     color: var(--accent-color);
@@ -120,7 +129,7 @@ a {
 
 .link-title {
     font-size: 19px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.3;
 
     color: var(--main-text-color);
@@ -143,8 +152,8 @@ a {
 
 .current-price {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 1.4;
+    /* font-weight: 600; */
+    /* line-height: 1.4; */
 
     color: var(--main-text-color);
 }
@@ -159,8 +168,8 @@ a {
 
 .title-rating {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 1.4;
+    /* font-weight: 600; */
+    /* line-height: 1.4; */
 
     color: var(--main-text-color);
 }
@@ -179,7 +188,7 @@ a {
 
 .all-reviews {
     font-size: 19px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.3;
 
     color: var(--secondary-etxt-color);
@@ -187,7 +196,7 @@ a {
 
 .reviews-name {
     font-size: 17px;
-    line-height: 1.4;
+    /* line-height: 1.4; */
 
     color: var(--main-text-color);
 }
@@ -200,8 +209,8 @@ a {
 
 .reviews-link {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 1.4;
+    /* font-weight: 600; */
+    /* line-height: 1.4; */
 
     color: var(--secondary-etxt-color);
 }
@@ -209,7 +218,7 @@ a {
 /* СТИЛІ ДЛЯ "СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ" */
 .read-blog {
     font-size: 19px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.3;
 
     color: var(--accent-color);
@@ -217,13 +226,13 @@ a {
 
 .news-title {
     font-size: 26px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.3;
 }
 
 .articles-news .link-detail {
     font-size: 19px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.3;
 
     color: var(--accent-color);
@@ -237,7 +246,7 @@ a {
 
 .about .after-title {
     font-size: 40px;
-    font-weight: 600;
+    /* font-weight: 600; */
     line-height: 1.2;
 
     color: var(--main-text-color);
@@ -251,8 +260,8 @@ a {
 
 .benefits-text {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 1.4;
+    /* font-weight: 600; */
+    /* line-height: 1.4; */
 
     color: var(--main-text-color);
 }
@@ -271,8 +280,8 @@ a {
 
 .footer-title {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 1.4;
+    /* font-weight: 600; */
+    /* line-height: 1.4; */
 
     color: var(--white-text-color);
 }
@@ -287,8 +296,8 @@ a {
 .connection {
     font-size: 20px;
     font-style: normal;
-    font-weight: 600;
-    line-height: 1.4;
+    /* font-weight: 600; */
+    /* line-height: 1.4; */
 }
 
 .footer-connection {
