--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,20 @@ h3 {
     color: var(--white-text-color);
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 /* СТИЛІ ДЛЯ ХЕДЕРА  */
 .header .link-about {
     line-height: 1.9;
