--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,12 @@ h3 {
     font-weight: 600;
 }
 
+.container {
+    width: 1290px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .section-title {
     font-size: 40px;
     /* font-weight: 600; */
