--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ body {
 
 .list {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 a {
@@ -34,15 +36,20 @@ h3 {
 }
 
 .container {
-    width: 1290px;
+    width: 1320px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+
+    outline: 1px solid red;
 }
 
 .section-title {
     font-size: 40px;
     /* font-weight: 600; */
     line-height: 1.2;
+    margin: 0;
 
     color: var(--main-text-color);
 }
@@ -51,9 +58,11 @@ h3 {
     font-family: "Montserrat";
     font-size: 19px;
     font-weight: 600;
-    line-height: 1.3;
+    line-height: 1.26;
 
     cursor: pointer;
+    border-radius: 8px;
+    border: transparent;
     background-color: var(--accent-color);
     color: var(--white-text-color);
 }
@@ -89,6 +98,14 @@ h3 {
     background-color: var(--white-text-color);
 }
 
+.catalog {
+    padding-top: 11px;
+    padding-bottom: 11px;
+    padding-left: 20px;
+    padding-right: 20px;
+    min-width: 145px;
+}
+
 .header .work-hours {
     font-size: 13px;
     font-weight: 300;
@@ -105,7 +122,6 @@ h3 {
     color: var(--main-text-color);
 }
 
-
 .icons-list .icons-link,
 .species-list .species-link {
     font-size: 19px;
@@ -115,9 +131,19 @@ h3 {
     color: var(--secondary-etxt-color);
 }
 
+/* СТИЛІ ДЛЯ "ГЕРОЙ" */
+.slider {
+    margin-bottom: 70px;
+}
+
 /* СТИЛІ ДЛЯ "ПОПУЛЯРНІ КАТЕГОРІЇ" */
+.popular-categories {
+    margin-bottom: 70px;
+}
+
 .popular-categories .description {
     font-size: 20px;
+    margin: 0;
     /* font-weight: 600; */
     /* line-height: 1.4; */
 }
@@ -131,6 +157,10 @@ h3 {
 }
 
 /* СТИЛІ ДЛЯ "НАЙПОПУЛЯРНІШІ ТОВАРИ" */
+.popular-products {
+    margin-bottom: 80px;
+}
+
 .view-all {
     font-size: 19px;
     /* font-weight: 600; */
@@ -180,9 +210,15 @@ h3 {
 
 /* СТИЛІ ДЛЯ "АКЦІЇ" */
 
+.shares {
+    margin-bottom: 70px;
+}
 
 /* СТИЛІ ДЛЯ "ОСТАННІ ВІДГУКИ" */
 .last-reviews {
+    padding-top: 70px;
+    padding-bottom: 50px;
+    margin-bottom: 70px;
     background-color: #E9E9E9;
 }
 
@@ -204,6 +240,11 @@ h3 {
     line-height: 1.7;
 
     color: var(--secondary-etxt-color);
+}
+
+.write-review {
+    padding: 13px 13.5px;
+    min-width: 210px;
 }
 
 .all-reviews {
@@ -235,7 +276,16 @@ h3 {
     color: var(--secondary-etxt-color);
 }
 
+.reviews-date {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 /* СТИЛІ ДЛЯ "СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ" */
+.articles-news {
+    margin-bottom: 70px;
+}
+
 .read-blog {
     font-size: 19px;
     /* font-weight: 600; */
@@ -261,6 +311,7 @@ h3 {
 
 /* СТИЛІ ДЛЯ "ПРО:ПЕРЕВАГИ" */
 .about {
+    padding-bottom: 40px;
     background-color: var(--white-text-color);
 }
 
@@ -278,7 +329,11 @@ h3 {
     color: var(--main-text-color);
 }
 
+/* "ПЕРЕВАГИ" */
+
 .benefits-text {
+    margin-top: 0;
+    margin-bottom: 0;
     font-size: 20px;
     /* font-weight: 600; */
     /* line-height: 1.4; */
@@ -288,6 +343,8 @@ h3 {
 
 /* СТИЛІ ДЛЯ ФУТЕРА */
 .footer {
+    padding-top: 40px;
+    padding-bottom: 20px;
     background-color: var(--main-text-color);
 }
 
@@ -330,6 +387,8 @@ h3 {
 }
 
 .footer .copyright {
+    margin-top: 0;
+    margin-bottom: 0;
     font-size: 15px;
     line-height: 1.5;
 
