--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,10 @@ h3 {
     outline: 1px solid red;
 }
 
+.section {
+    margin-bottom: 70px;
+}
+
 .section-title {
     font-size: 40px;
     /* font-weight: 600; */
@@ -83,10 +87,30 @@ h3 {
 }
 
 /* СТИЛІ ДЛЯ ХЕДЕРА  */
+.header {
+    margin-bottom: 30px;
+}
+
+.header .list-about {
+    display: flex;
+}
+
+.item-about+.item-about {
+    margin-left: 30px;
+}
+
 .header .link-about {
+    display: block;
+    padding-top: 15px;
+    padding-bottom: 15px;
     line-height: 1.9;
 
     color: var(--secondary-etxt-color);
+}
+
+.header .link-about:hover,
+.header .link-about:focus {
+    color: var(--accent-color);
 }
 
 .help-consul {
@@ -127,25 +151,43 @@ h3 {
     color: var(--main-text-color);
 }
 
+.list-wrapper {
+    display: flex;
+}
+
+.icons-list {
+    display: flex;
+}
+
+.icons-item:not(:last-child) {
+    margin-right: 40px;
+}
+
+.species-list {
+    display: flex;
+    margin-left: auto;
+}
+
+.species-item {
+    margin-right: 40px;
+}
+
+.species-item:last-child {
+    margin-right: 0;
+}
+
 .icons-list .icons-link,
 .species-list .species-link {
     font-size: 19px;
     /* font-weight: 600; */
-    line-height: 1.3;
+    line-height: 1.26;
 
     color: var(--secondary-etxt-color);
 }
 
 /* СТИЛІ ДЛЯ "ГЕРОЙ" */
-.slider {
-    margin-bottom: 70px;
-}
 
 /* СТИЛІ ДЛЯ "ПОПУЛЯРНІ КАТЕГОРІЇ" */
-.popular-categories {
-    margin-bottom: 70px;
-}
-
 .popular-categories .description {
     font-size: 20px;
     margin: 0;
@@ -162,7 +204,7 @@ h3 {
 }
 
 /* СТИЛІ ДЛЯ "НАЙПОПУЛЯРНІШІ ТОВАРИ" */
-.popular-products {
+.section.popular-products {
     margin-bottom: 80px;
 }
 
@@ -214,10 +256,6 @@ h3 {
 }
 
 /* СТИЛІ ДЛЯ "АКЦІЇ" */
-.shares {
-    margin-bottom: 70px;
-}
-
 .shares .title {
     margin-bottom: 46px;
 }
@@ -226,7 +264,6 @@ h3 {
 .last-reviews {
     padding-top: 70px;
     padding-bottom: 50px;
-    margin-bottom: 70px;
     background-color: #E9E9E9;
 }
 
@@ -290,10 +327,6 @@ h3 {
 }
 
 /* СТИЛІ ДЛЯ "СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ" */
-.articles-news {
-    margin-bottom: 70px;
-}
-
 .read-blog {
     font-size: 19px;
     /* font-weight: 600; */
@@ -322,6 +355,10 @@ h3 {
     padding-top: 70px;
     padding-bottom: 40px;
     background-color: var(--white-text-color);
+}
+
+.about.no-margin {
+    margin-bottom: 0;
 }
 
 .about .after-title {
