--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,27 @@ h3 {
 /* СТИЛІ ДЛЯ "ГЕРОЙ" */
 
 /* СТИЛІ ДЛЯ "ПОПУЛЯРНІ КАТЕГОРІЇ" */
+.popular-categories .list-categories {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item-categories {
+    margin-right: 10px;
+    margin-bottom: 24px;
+    /* width: 250px; */
+    width: calc((100% - 40px) /5);
+    border: 1px solid gray;
+}
+
+.item-categories:nth-child(5n) {
+    margin-right: 0;
+}
+
+.item-categories:nth-last-child(-n+5) {
+    margin-bottom: 0;
+}
+
 .popular-categories .description {
     font-size: 20px;
     margin: 0;
@@ -208,12 +229,48 @@ h3 {
     margin-bottom: 80px;
 }
 
+.title-wrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.section-title.no-margin {
+    margin-bottom: 0;
+    margin-right: 30px;
+}
+
 .view-all {
+    padding-top: 12px;
+    padding-bottom: 12px;
     font-size: 19px;
     /* font-weight: 600; */
     line-height: 1.3;
 
     color: var(--accent-color);
+}
+
+.popular-products .list-products {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item-products {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    padding: 20px;
+    /* width: 300px; */
+    width: calc((100% - 90px) / 4);
+
+    border: 1px solid black;
+}
+
+.item-products:nth-child(4n) {
+    margin-right: 0;
+}
+
+.item-products:nth-last-child(-n + 4) {
+    margin-bottom: 0;
 }
 
 .popular-products .size {
