--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,17 @@ h3 {
     min-width: 145px;
 }
 
+.catalog::before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: sub;
+
+    background-image: url("../images/catalog-menu.svg");
+}
+
 .header .work-hours {
     margin-top: 0;
     margin-bottom: 0;
@@ -224,6 +235,10 @@ h3 {
     color: #B1B1B1;
 }
 
+.img-categories {
+    background-color: pink;
+}
+
 /* СТИЛІ ДЛЯ "НАЙПОПУЛЯРНІШІ ТОВАРИ" */
 .section.popular-products {
     margin-bottom: 80px;
@@ -286,7 +301,7 @@ h3 {
 .link-title {
     font-size: 19px;
     /* font-weight: 600; */
-    line-height: 1.3;
+    line-height: 1.26;
 
     color: var(--main-text-color);
 }
@@ -556,12 +571,14 @@ h3 {
 
 /* СТИЛІ ДЛЯ ФУТЕРА */
 .footer {
+    position: relative;
     padding-top: 40px;
     padding-bottom: 20px;
     background-color: var(--main-text-color);
 }
 
 .footer .wrapper-footer {
+    padding-bottom: 40px;
     display: flex;
 }
 
@@ -647,11 +664,21 @@ h3 {
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 20px;
-    padding-bottom: 20px;
     font-weight: 400;
     font-size: 15px;
     line-height: 1.46;
     text-align: center;
 
     color: #B1B1B1;
+}
+
+.footer .copyright::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 62px;
+    display: inline-block;
+    width: 100%;
+    height: 2px;
+    background-color: #3D3D3D;
 }
