--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ h3 {
     font-size: 19px;
     font-weight: 600;
     line-height: 1.26;
+    display: inline-flex;
 
     cursor: pointer;
     border-radius: 8px;
@@ -138,8 +139,6 @@ h3 {
     width: 24px;
     height: 24px;
     margin-right: 10px;
-    display: inline-block;
-    vertical-align: sub;
 
     background-image: url("../images/catalog-menu.svg");
 }
@@ -392,6 +391,15 @@ h3 {
     padding: 13px 13.5px;
     margin-right: 30px;
     min-width: 210px;
+}
+
+.write-review::before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    margin-right: 15px;
+
+    background-image: url("../images/write-review-opt.svg");
 }
 
 .all-reviews {
