--- a/css/styles.css
+++ b/css/styles.css
@@ -170,8 +170,39 @@ h3 {
     display: flex;
 }
 
+.icons-item {
+    display: inline-flex;
+}
+
 .icons-item:not(:last-child) {
     margin-right: 40px;
+}
+
+.icons-item:nth-child(1)::before {
+    content: "";
+    margin-right: 5px;
+    width: 24px;
+    height: 24px;
+
+    background-image: url("../images/header/зірка-опт.svg");
+}
+
+.icons-item:nth-child(2)::before {
+    content: "";
+    margin-right: 5px;
+    width: 24px;
+    height: 24px;
+
+    background-image: url("../images/header/розпродаж-опт.svg");
+}
+
+.icons-item:nth-child(3)::before {
+    content: "";
+    margin-right: 5px;
+    width: 24px;
+    height: 24px;
+
+    background-image: url("../images/header/кредит-опт.svg");
 }
 
 .species-list {
@@ -189,7 +220,7 @@ h3 {
 
 .icons-list .icons-link,
 .species-list .species-link {
-    font-size: 19px;
+    font-size: 17px;
     /* font-weight: 600; */
     line-height: 1.26;
 
@@ -311,6 +342,17 @@ h3 {
     font-weight: 300;
     line-height: 1.7;
     color: var(--main-text-color);
+}
+
+.in-stock::before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    margin-right: 5px;
+    vertical-align: middle;
+
+    background-image: url("../images/popular-products/in-stock-opt.svg");
 }
 
 .past-price {
