--- a/css/styles.css
+++ b/css/styles.css
@@ -5,18 +5,18 @@
 /* основний колір фону: #F8F8F8 */
 
 :root {
-    --main-text-color: #2B2929;
+    --main-text-color: #2b2929;
     --secondary-etxt-color: #535353;
-    --white-text-color: #FFFFFF;
-    --primary-bg-color: #F8F8F8;
-    --accent-color: #FFBC57;
+    --white-text-color: #ffffff;
+    --primary-bg-color: #f8f8f8;
+    --accent-color: #ffbc57;
 }
 
 body {
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
     line-height: 1.4;
-    color: #2B2929;
+    color: #2b2929;
     background-color: var(--primary-bg-color);
 }
 
@@ -217,7 +217,6 @@ img {
     border: none;
 
     background-color: transparent;
-
 }
 
 .header .icon-button {
@@ -362,8 +361,7 @@ img {
     margin-right: 10px;
     margin-bottom: 24px;
     /* width: 250px; */
-    width: calc((100% - 40px) /5);
-
+    width: calc((100% - 40px) / 5);
 
     border-radius: 8px;
     overflow: hidden;
@@ -376,7 +374,7 @@ img {
     margin-right: 0;
 }
 
-.item-categories:nth-last-child(-n+5) {
+.item-categories:nth-last-child(-n + 5) {
     margin-bottom: 0;
 }
 
@@ -398,7 +396,7 @@ img {
     position: absolute;
     top: 20px;
     right: 20px;
-    color: #B1B1B1;
+    color: #b1b1b1;
 }
 
 .link-categories {
@@ -426,7 +424,7 @@ img {
     margin-bottom: 80px;
 }
 
-.title-wrapper {
+.articles-news .title-wrapper {
     display: flex;
     align-items: center;
     margin-bottom: 40px;
@@ -448,6 +446,18 @@ img {
     margin-left: 10px;
 }
 
+.articles-news .wrapper-arrow {
+    margin-left: auto;
+}
+
+.button-news {
+    padding: 0;
+    cursor: pointer;
+
+    border: none;
+    background-color: transparent;
+}
+
 .popular-products .list-products {
     display: flex;
     flex-wrap: wrap;
@@ -463,7 +473,10 @@ img {
     /* width: calc((100% - 90px) / 4); */
 
     /* border: 1px solid #E3E2E2; */
-    border: 1px solid black;
+    border-radius: 8px;
+    border: 1px solid #E3E2E2;
+    background-color: var(--white-text-color);
+    box-shadow: -3px 4px 15px 0px rgba(0, 0, 0, 0.06);
 }
 
 /* .item-products:nth-child(4n) {
@@ -494,13 +507,13 @@ img {
     margin-bottom: 10px;
     font-size: 17px;
     /* font-weight: 600; */
-    line-height: 1.26;
+    line-height: 1.53;
 
     color: var(--main-text-color);
 }
 
 .link-title.add-height {
-    line-height: 2.52;
+    line-height: 3.06;
 }
 
 .in-stock {
@@ -529,7 +542,7 @@ img {
     line-height: 1.46;
     text-decoration-line: line-through;
 
-    color: #E03D3D;
+    color: #e03d3d;
 }
 
 .current-price {
@@ -603,7 +616,11 @@ img {
 .last-reviews {
     padding-top: 70px;
     padding-bottom: 50px;
-    background-color: #E9E9E9;
+    background-color: #e9e9e9;
+}
+
+.last-reviews>.wrapper-reviews {
+    display: flex;
 }
 
 .last-reviews .logo-rating {
@@ -629,9 +646,17 @@ img {
     color: var(--main-text-color);
 }
 
+.rating-icon {
+    display: flex;
+    align-items: center;
+}
+
 .rating {
     margin-top: 0;
     margin-bottom: 0;
+    margin-right: 10px;
+    font-size: 19px;
+    line-height: 1.26;
     color: var(--accent-color);
 }
 
@@ -640,79 +665,119 @@ img {
     margin-bottom: 0;
     font-size: 13px;
     font-weight: 300;
-    line-height: 1.7;
+    line-height: 1.69;
 
     color: var(--secondary-etxt-color);
 }
 
 .write-review {
     padding: 13px 13.5px;
-    margin-right: 30px;
+    margin-right: 5px;
     min-width: 210px;
 }
 
-.write-review::before {
-    content: "";
-    width: 24px;
-    height: 24px;
+.icon-review {
     margin-right: 15px;
-
-    background-image: url("../images/last-reviews/write-review-opt.svg");
 }
 
 .all-reviews {
     font-size: 19px;
     /* font-weight: 600; */
     line-height: 1.3;
+    display: inline-flex;
+    align-items: center;
 
     color: var(--secondary-etxt-color);
 }
 
+.all-reviews:hover,
+.all-reviews:focus {
+    color: var(--accent-color);
+}
+
+.icon-reviews {
+    margin-right: 15px;
+    fill: currentColor;
+}
+
 .list-reviews {
     display: flex;
+    gap: 20px;
 }
 
 .item-reviews {
     padding: 30px;
-    width: 450px;
+    width: 430px;
+
 
     border-radius: 8px;
-    border: 1px solid #E3E2E2;
-    background: #FFF;
+    border: 1px solid #e3e2e2;
+    background: #fff;
     box-shadow: -3px 4px 15px 0px rgba(0, 0, 0, 0.06);
 }
+
+/* .item-reviews:not(:last-child) {
+    margin-right: 30px;
+} */
 
 .item-reviews>.name-date {
     display: flex;
     margin-bottom: 2px;
 }
 
+.button-avatar {
+    padding: 0;
+    margin-right: 20px;
+    border: none;
+
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.icon-avatar {
+    vertical-align: middle;
+}
+
 .name-reviews {
     margin-bottom: 0;
     margin-top: 0;
-    max-width: 208px;
     font-size: 17px;
     font-weight: 400;
-    /* line-height: 1.4; */
+    line-height: 1.41;
 
     color: var(--main-text-color);
+}
+
+.descr-icon {
+    display: flex;
 }
 
 .descr-reviews {
     margin-top: 0;
     margin-bottom: 30px;
+    max-width: 356px;
     font-weight: 40;
     line-height: 1.87;
 
     color: var(--secondary-etxt-color);
 }
 
+.icon-scroll {
+    margin-left: 6px;
+}
+
 .link-reviews {
-    font-size: 20px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
     /* font-weight: 600; */
     /* line-height: 1.4; */
 
     color: var(--secondary-etxt-color);
+}
+
+.img-tovar {
+    margin-right: 10px;
 }
 
 .date-reviews {
@@ -733,9 +798,9 @@ img {
 
     border-radius: 8px;
     /* border: 1px solid #E3E2E2; */
-    border-left: 1px solid #E3E2E2;
-    border-bottom: 1px solid #E3E2E2;
-    border-right: 1px solid #E3E2E2;
+    /* border-left: 1px solid #e3e2e2;
+    border-bottom: 1px solid #e3e2e2;
+    border-right: 1px solid #e3e2e2; */
     background-color: var(--white-text-color);
     box-shadow: -3px 4px 15px 0px rgba(0, 0, 0, 0.06);
 }
@@ -748,6 +813,8 @@ img {
     font-size: 19px;
     /* font-weight: 600; */
     line-height: 1.3;
+    display: flex;
+    align-items: center;
 
     color: var(--accent-color);
 }
@@ -758,6 +825,9 @@ img {
     padding-right: 30px;
     padding-bottom: 20px;
 
+    border-left: 1px solid #e3e2e2;
+    border-bottom: 1px solid #e3e2e2;
+    border-right: 1px solid #e3e2e2;
 }
 
 .news-title {
@@ -768,14 +838,22 @@ img {
     line-height: 1.3;
 }
 
+.news-title.added-height {
+    line-height: 1.95;
+}
+
 .articles-news .link-detail {
     font-size: 19px;
     /* font-weight: 600; */
-    line-height: 1.3;
+    line-height: 1.26;
 
     color: var(--accent-color);
 }
 
+.icon-detail {
+    margin-left: 10px;
+    vertical-align: middle;
+}
 
 /* СТИЛІ ДЛЯ "ПРО:ПЕРЕВАГИ" */
 .about {
@@ -935,7 +1013,7 @@ img {
     line-height: 1.46;
     text-align: center;
 
-    color: #B1B1B1;
+    color: #b1b1b1;
 }
 
 .footer .copyright::before {
@@ -946,5 +1024,5 @@ img {
     display: inline-block;
     width: 100%;
     height: 2px;
-    background-color: #3D3D3D;
+    background-color: #3d3d3d;
 }
