--- a/css/styles.css
+++ b/css/styles.css
@@ -796,7 +796,7 @@ img {
     width: 410px;
     /* width: calc((100% - 60px) / 3); */
 
-    border-radius: 8px;
+    /* border-radius: 8px; */
     /* border: 1px solid #E3E2E2; */
     /* border-left: 1px solid #e3e2e2;
     border-bottom: 1px solid #e3e2e2;
@@ -881,11 +881,20 @@ img {
 }
 
 .about-text {
-    margin-bottom: 70px;
     font-weight: 400;
     line-height: 1.87;
 
     color: var(--main-text-color);
+}
+
+.about-text.text-first {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.about-text.text-second {
+    margin-bottom: 70px;
+    margin-top: 0;
 }
 
 /* "ПЕРЕВАГИ" */
@@ -895,22 +904,35 @@ img {
 }
 
 .item-benefits {
-    max-width: 200px;
     margin-right: 30px;
+    display: flex;
+    align-items: center;
 }
 
 .item-benefits:last-child {
     margin-right: 0;
 }
 
+.icons-benefits {
+    width: 80px;
+    height: 80px;
+    margin-right: 20px;
+}
+
 .benefits-text {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 20px;
+    max-width: 200px;
     /* font-weight: 600; */
     /* line-height: 1.4; */
 
     color: var(--main-text-color);
+}
+
+.benefits-text.last-text {
+    max-width: 0;
+    min-width: 200px;
 }
 
 /* СТИЛІ ДЛЯ ФУТЕРА */
