--- a/css/styles.css
+++ b/css/styles.css
@@ -949,16 +949,24 @@ img {
 }
 
 .wrapper-item+.wrapper-item {
-    margin-left: 83px;
+    margin-left: 75px;
 }
+
+.wrapper-item:nth-child(2) {
+    max-width: 148px;
+}
+
+.wrapper-item:nth-child(3) {
+    max-width: 108px;
+}
+
+/* .wrapper-item:last-child {
+    max-width: 240px;
+} */
 
 .wrapper-item>.link-logo {
     display: block;
     margin-bottom: 40px;
-}
-
-.wrapper-item:last-child {
-    max-width: 240px;
 }
 
 .wrapper-item .item-footer:not(:last-child) {
@@ -969,9 +977,72 @@ img {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 17px;
-    line-height: 24px;
+    font-weight: 400;
+    line-height: 1.41;
 
     color: var(--white-text-color);
+}
+
+.footer-text.join {
+    margin-bottom: 10px;
+}
+
+.footer-text.help {
+    margin-bottom: 10px;
+}
+
+.wrapper-footer .links-social {
+    margin-bottom: 30px;
+    display: flex;
+    gap: 15px;
+}
+
+.links-social.secondary {
+    margin-bottom: 40px;
+}
+
+.wrapper-item .link-social {
+    display: block;
+    width: 40px;
+    height: 40px;
+
+    transition: transform 250ms linear;
+}
+
+.wrapper-item .link-social:hover {
+    transform: scale(1.5);
+}
+
+.link-social>.icon-social {
+    width: 100%;
+    height: 100%;
+}
+
+.visa-mastercard {
+    display: flex;
+}
+
+.link-visa {
+    display: block;
+    width: 70px;
+    height: 30px;
+    margin-right: 30px;
+}
+
+.link-visa>.icon-visa {
+    width: 100%;
+    height: 100%;
+}
+
+.link-mastercard {
+    display: block;
+    width: 89px;
+    height: 30px;
+}
+
+.link-mastercard>.icon-mastercard {
+    width: 100%;
+    height: 100%;
 }
 
 .footer-title {
@@ -992,13 +1063,23 @@ img {
     color: var(--primary-bg-color);
 }
 
+/* ADDRESS */
+.address-wrapper {
+    display: flex;
+}
+
+.icon-address {
+    margin-right: 15px;
+}
+
 .address {
     margin-bottom: 32px;
 }
 
 .connection {
-    font-size: 20px;
+    font-size: 17px;
     font-style: normal;
+    max-width: 175px;
     /* font-weight: 600; */
     /* line-height: 1.4; */
 }
@@ -1011,7 +1092,7 @@ img {
 }
 
 .phone {
-    display: inline-block;
+    display: block;
 }
 
 .footer-call {
