--- a/css/styles.css
+++ b/css/styles.css
@@ -1052,22 +1052,42 @@ img {
     width: 70px;
     height: 30px;
     margin-right: 30px;
+
+    color: #b1b1b1;
 }
 
 .link-visa>.icon-visa {
     width: 100%;
     height: 100%;
+
+    fill: currentColor;
+}
+
+.link-visa:hover,
+.link-visa:focus {
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);
 }
 
 .link-mastercard {
     display: block;
     width: 89px;
     height: 30px;
+
+    color: #b1b1b1;
 }
 
 .link-mastercard>.icon-mastercard {
     width: 100%;
     height: 100%;
+
+    fill: currentColor;
+}
+
+.link-mastercard>.icon-mastercard:hover,
+.link-mastercard>.icon-mastercard:focus {
+    border: 1px solid var(--accent-color);
+    color: var(--accent-color);
 }
 
 .footer-title {
