--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ img {
 
 .button {
     font-family: "Montserrat";
-    font-size: 19px;
+    font-size: 17px;
     font-weight: 600;
     line-height: 1.26;
     display: inline-flex;
@@ -215,19 +215,36 @@ img {
     padding-left: 20px;
     padding-right: 20px;
     min-width: 145px;
+
+    border: 1px solid transparent;
+    color: var(--white-text-color);
+}
+
+.icon-catalog {
+    fill: currentColor;
+}
+
+.catalog:hover,
+.catalog:focus {
+    border: 1px solid var(--accent-color);
+    color: var(--accent-color);
+    background-color: var(--white-text-color);
 }
 
 .header .icon-catalog {
     margin-right: 10px;
 }
 
-.wrapper-hourstel {
+.main-feedback {
+    position: relative;
     padding: 0;
     display: flex;
     align-items: center;
-    border: none;
 
-    background-color: transparent;
+    border: none;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.12);
+
+    background-color: var(--white-text-color);
 }
 
 .header .icon-button {
@@ -238,7 +255,7 @@ img {
     cursor: pointer;
 }
 
-.wrapper-hourstel .icon-phone {
+.main-feedback .icon-phone {
     width: 100%;
     height: 100%;
     fill: currentColor;
@@ -259,24 +276,54 @@ img {
 }
 
 .header-tel {
-    font-size: 20px;
-    /* font-weight: 600; */
-    /* line-height: 1.4; */
+    font-size: 19px;
+    line-height: 2.26;
 
     color: var(--main-text-color);
 }
 
-.wrapper-hourstel:hover .icon-button,
-.wrapper-hourstel:focus .icon-button,
-.wrapper-hourstel:hover .work-hours,
-.wrapper-hourstel:focus .work-hours,
-.wrapper-hourstel:hover .header-tel,
-.wrapper-hourstel:focus .header-tel {
+.header-tel:hover,
+.header-tel:focus {
     color: var(--accent-color);
 }
 
-.wrapper-hourstel .arrow-down {
+.main-feedback:hover .icon-button,
+.main-feedback:focus .icon-button,
+.main-feedback:hover .text-item,
+.main-feedback:focus .text-item {
+    color: var(--accent-color);
+}
+
+.main-feedback .arrow-down {
     margin-right: 0;
+}
+
+.feedback {
+    position: absolute;
+    top: 100%;
+    left: 0;
+
+    padding-left: 60px;
+    width: 100%;
+
+    background-color: var(--white-text-color);
+
+    /* display: block; */
+    display: none;
+}
+
+
+.main-feedback:hover .feedback {
+    display: block;
+}
+
+.header-tel.useful {
+    display: block;
+}
+
+.text-item {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .obrane-korzina {
@@ -481,7 +528,6 @@ img {
     margin: 15px;
     /* margin-right: 30px;
     margin-bottom: 30px; */
-    /* width: calc((100% - 90px) / 4); */
 
     /* border: 1px solid #E3E2E2; */
     border-radius: 8px;
@@ -727,7 +773,6 @@ img {
     padding: 30px;
     width: 430px;
 
-
     border-radius: 8px;
     border: 1px solid #e3e2e2;
     background: #fff;
@@ -740,7 +785,7 @@ img {
 
 .item-reviews>.name-date {
     display: flex;
-    margin-bottom: 2px;
+    margin-bottom: 30px;
 }
 
 .button-avatar {
@@ -753,6 +798,9 @@ img {
 }
 
 .icon-avatar {
+    width: 100%;
+    height: 100%;
+
     vertical-align: middle;
 }
 
@@ -766,22 +814,21 @@ img {
     color: var(--main-text-color);
 }
 
-.descr-icon {
-    display: flex;
+.icon-stars {
+    display: block;
 }
 
 .descr-reviews {
     margin-top: 0;
     margin-bottom: 30px;
-    max-width: 356px;
-    font-weight: 40;
+    min-width: 370px;
+    max-height: 150px;
+    font-weight: 400;
     line-height: 1.87;
 
-    color: var(--secondary-etxt-color);
-}
+    overflow-y: scroll;
 
-.icon-scroll {
-    margin-left: 6px;
+    color: var(--secondary-etxt-color);
 }
 
 .link-reviews {
@@ -1045,13 +1092,13 @@ img {
 
 .visa-mastercard {
     display: flex;
+    gap: 30px;
 }
 
 .link-visa {
     display: block;
     width: 70px;
     height: 30px;
-    margin-right: 30px;
 
     color: #b1b1b1;
 }
