--- a/css/styles.css
+++ b/css/styles.css
@@ -242,9 +242,16 @@ img {
     align-items: center;
 
     border: none;
+    border-radius: 8px;
+
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.12);
 
     background-color: var(--white-text-color);
+}
+
+.main-feedback:hover {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 .header .icon-button {
@@ -306,6 +313,8 @@ img {
     padding-left: 60px;
     width: 100%;
 
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
     background-color: var(--white-text-color);
 
     /* display: block; */
