--- a/css/styles.css
+++ b/css/styles.css
@@ -75,9 +75,17 @@ img {
 
     cursor: pointer;
     border-radius: 8px;
-    border: transparent;
+    border: 1px solid transparent;
     background-color: var(--accent-color);
     color: var(--white-text-color);
+
+    transition: border 250ms linear, color 250ms linear, background-color 250ms linear;
+}
+
+.button:hover {
+    border: 1px solid var(--accent-color);
+    color: var(--accent-color);
+    background-color: var(--white-text-color);
 }
 
 .no-margin {
@@ -135,6 +143,8 @@ img {
     line-height: 1.88;
 
     color: var(--secondary-etxt-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header .link-about:hover,
@@ -216,19 +226,10 @@ img {
     padding-right: 20px;
     min-width: 145px;
 
-    border: 1px solid transparent;
-    color: var(--white-text-color);
 }
 
 .icon-catalog {
     fill: currentColor;
-}
-
-.catalog:hover,
-.catalog:focus {
-    border: 1px solid var(--accent-color);
-    color: var(--accent-color);
-    background-color: var(--white-text-color);
 }
 
 .header .icon-catalog {
@@ -244,14 +245,14 @@ img {
     border: none;
     border-radius: 8px;
 
-    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.12);
-
     background-color: var(--white-text-color);
 }
 
 .main-feedback:hover {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
+
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.12);
 }
 
 .header .icon-button {
@@ -284,7 +285,7 @@ img {
 
 .header-tel {
     font-size: 19px;
-    line-height: 2.26;
+    /* line-height: 2.26; */
 
     color: var(--main-text-color);
 }
@@ -323,7 +324,9 @@ img {
 
 
 .main-feedback:hover .feedback {
+    padding-bottom: 20px;
     display: block;
+    line-height: 2.26;
 }
 
 .header-tel.useful {
@@ -342,6 +345,8 @@ img {
 
     cursor: pointer;
     color: var(--secondary-etxt-color);
+
+    transition: color 250ms linear;
 }
 
 .obrane-korzina:hover,
@@ -400,6 +405,7 @@ img {
     line-height: 1.26;
 
     color: var(--secondary-etxt-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icons-list .icons-link:hover,
@@ -637,6 +643,8 @@ img {
 
 .button-sire {
     color: transparent;
+
+    transition: color 250ms linear;
 }
 
 .button-sire:hover,
@@ -652,6 +660,8 @@ img {
 
 .button-white {
     color: #fff;
+
+    transition: color 250ms linear;
 }
 
 .button-white:hover,
@@ -744,16 +754,18 @@ img {
 }
 
 .write-review {
-    padding: 13px 13.5px;
+    padding: 13px 11px;
     margin-right: 5px;
     min-width: 210px;
 }
 
 .icon-review {
+    fill: currentColor;
     margin-right: 15px;
 }
 
 .all-reviews {
+    padding: 13px 11px;
     font-size: 19px;
     /* font-weight: 600; */
     line-height: 1.3;
@@ -761,10 +773,15 @@ img {
     align-items: center;
 
     color: var(--secondary-etxt-color);
+    border-radius: 8px;
+    border: 1px solid transparent;
+
+    transition: color 250ms linear, border 250ms linear;
 }
 
 .all-reviews:hover,
 .all-reviews:focus {
+    border: 1px solid var(--accent-color);
     color: var(--accent-color);
 }
 
@@ -835,7 +852,7 @@ img {
     font-weight: 400;
     line-height: 1.87;
 
-    overflow-y: scroll;
+    overflow: auto;
 
     color: var(--secondary-etxt-color);
 }
@@ -1110,6 +1127,9 @@ img {
     height: 30px;
 
     color: #b1b1b1;
+    border: 1px solid transparent;
+
+    transition: color 250ms linear, border 250ms linear;
 }
 
 .link-visa>.icon-visa {
@@ -1117,6 +1137,7 @@ img {
     height: 100%;
 
     fill: currentColor;
+
 }
 
 .link-visa:hover,
@@ -1131,6 +1152,9 @@ img {
     height: 30px;
 
     color: #b1b1b1;
+    border: 1px solid transparent;
+
+    transition: color 250ms linear, border 250ms linear;
 }
 
 .link-mastercard>.icon-mastercard {
@@ -1140,8 +1164,8 @@ img {
     fill: currentColor;
 }
 
-.link-mastercard>.icon-mastercard:hover,
-.link-mastercard>.icon-mastercard:focus {
+.link-mastercard:hover,
+.link-mastercard:focus {
     border: 1px solid var(--accent-color);
     color: var(--accent-color);
 }
@@ -1162,6 +1186,8 @@ img {
     line-height: 1.41;
 
     color: var(--primary-bg-color);
+
+    transition: color 250ms linear;
 }
 
 .footer-link:hover,
@@ -1195,10 +1221,17 @@ img {
     margin-bottom: 0;
 
     color: var(--white-text-color);
+
+    transition: color 250ms linear;
 }
 
 .phone {
     display: block;
+}
+
+.footer-connection.phone:hover,
+.footer-connection.phone:focus {
+    color: var(--accent-color);
 }
 
 .footer-call {
