positioned svg icon of form-input

--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ img {
     padding-bottom: 11px;
     padding-left: 20px;
     padding-right: 20px;
+    margin-right: 30px;
     min-width: 145px;
 
 }
@@ -236,11 +237,18 @@ img {
     margin-right: 10px;
 }
 
+/* СТИЛІ ДЛЯ ФОРМИ  */
+.form-search {
+    position: relative;
+
+    margin-right: 30px;
+}
+
 .form-input {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 15px;
-    padding-right: 280px;
+    padding-right: 190px;
 
     border-radius: 8px;
     border: 1px solid #B1B1B1;
@@ -253,6 +261,30 @@ img {
     color: #B1B1B1;
 }
 
+.button-search {
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    padding: 0;
+
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+
+    transform: translateY(-50%);
+
+    color: #535353;
+}
+
+.icon-search {
+    fill: currentColor;
+}
+
+/* .form-input:focus .icon-search {
+    color: var(--accent-color);
+} */
+
+/* ПРОДОВЖ. СТИЛІ ДЛЯ ХЕДЕРА */
 .main-feedback {
     position: relative;
     padding: 0;
@@ -339,7 +371,6 @@ img {
     /* display: block; */
     display: none;
 }
-
 
 .main-feedback:hover .feedback {
     padding-bottom: 20px;
