--- a/css/styles.css
+++ b/css/styles.css
@@ -288,11 +288,11 @@ margin-left: auto;
 }
 
 .catalog {
-  padding-top: 11px;
-  padding-bottom: 11px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 11px 20px;
+
   min-width: 145px;
+
+  border: none;
 }
 
 @media screen and (min-width:1320px) {
