added margin for header(to mobile)

--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,7 @@ img {
  .header-middle{
 padding-top: 20px;
 padding-bottom: 10px;
+margin-bottom: 40px;
 
        flex-wrap: wrap;
        row-gap: 30px;
